# makechurcheasy

./: .env.example  .env.production  .gitignore  .impeccable.md  .vercelignore  ConnectionUrls.css  ConnectionUrls.tsx  NewThemeModal.css  NewThemeModal.tsx  README.md  SECURITY_AUDIT_REPORT.md  SPEC-auth-system.md  add_new_step_modal.html  dock.html  docker-compose.yml  extract-dock-strings.mjs  full_langugae_list.json  index.html  index_2.html  lm-dock.html  media_library.html  modal_pop_up_when_user_in_service_hub_from_the_first_time.html  overlay.html  package-lock.json  package.json  quick_merge.html  service_completed_page.html  start_service_modal.html  tsconfig.json  updated_dashboard_page.html  versecast-plan-config.json  versecast-session.json  vite.config.ts
.github/: BRANCHING.md
cloudflare-analytics/: README.md  wrangler.toml
dock-reference/: obs_church_studio_introductory_screen_when_loaded_into_obs.html
docs/: trial-migration-strategy.md
lower_thirds/: all_themes.json  overlay_two.html
new_steps_modal/: audio_next_step.html  countdown_next_step.html  images_and_slides.html  scene_swither.html  template_preset_next_step.html
others/: NewDockbottombutton.css  NewDockbottombutton.tsx  NewTheemecreator.css  NewThemeCreator.tsx  OpenWorshipModal.css  OpenWorshipModal.tsx  types.ts
public/: bible-overlay-bg.html  bible-overlay-fullscreen.html  bible-overlay-lower-third.html  font-test.html  live-tool-overlay.html  lower-third-overlay.html  pre-service-countdown.html
release-assets/: latest.json
reports/: 01-entitlement-audit.md  02-usage-audit.md  03-billing-audit.md  04-trial-audit.md  05-security-audit.md  06-migration-readiness.md
scripts/: add_titles.py  add_titles_final.py  add_titles_remaining.py  (+14 more)
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  macos_icon.m  tauri.conf.json  windows-installer-hooks.nsh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assemblyai_stream.rs  audio_capture.rs  lib.rs  local_llm.rs  local_llm_stub.rs  main.rs  mobile_companion.rs
(+438 files in other folders)
