[package]
name = "makechurcheasy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "makechurcheasy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tiny_http = "0.12"
base64 = "0.22"
tauri-plugin-http = "2.5.7"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
cpal = "0.15"
scraper = "0.24"
encoding_rs = "0.8.35"
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hostname = "0.4"
quick-xml = { version = "0.38", features = ["serialize"] }
urlencoding = "2.1"
pdf-extract = "0.7"
tempfile = "3"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
dotenvy = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "=0.1.146", default-features = false, features = ["metal"] }
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
llama-cpp-2 = { version = "=0.1.146", default-features = false }
